# WaveScout

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/adapters/: __init__.py  demo_data.py  discovery_base.py  manual_discovery.py  (+13 more)
data/: demo_comments.json  demo_content_samples.json  demo_creators.json  demo_waves.json
scripts/: bootstrap.py  build_creator_packet.py  build_tiktok_oauth_url.py  check_tiktok_capabilities.py  demo_tiktok_growth_workflow.py  enrich_candidates_from_import.py  export_creator_packets.py  import_comments_csv.py  import_content_samples_csv.py  import_creators_csv.py  import_utils.py  plan_creator_scout.py  run_all_tests.py  run_discovery_dryrun.py  run_growth_engine.py  score_imported_creators.py  scout_wave.py  test_audience_analysis.py  test_comment_intelligence.py  test_content_posting_blocked.py  test_creator_scoring.py  test_creator_search_strategy.py  test_discovery_candidate_normalizer.py  test_discovery_dryrun.py  test_discovery_provider_layer.py  test_exa_discovery_provider.py  test_feedback_loop.py  test_growth_brief_renderer.py  test_growth_engine.py  test_growth_engine_live_gates.py  test_growth_engine_mcp_tools.py  test_live_discovery_gate.py  test_live_integration_mcp_tools.py  test_mcp_tools_import.py  test_notion_pipeline_builder.py  test_notion_sync_dryrun.py  test_owned_tiktok_analysis.py  test_product_intelligence.py  test_real_creator_import_workflow.py  test_scout_planner.py  (+12 more)
templates/: comments_template.csv  content_samples_template.csv  creators_template.csv
(+81 files in other folders)
