[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wavescout"
version = "0.1.0"
description = "Offline creator-led growth intelligence for TikTok trend waves and creator qualification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["app*"]

